[gd_scene load_steps=8 format=3 uid="uid://dy012gt2k7xmt"]

[ext_resource type="Texture2D" uid="uid://dcjgi1lf4jyut" path="res://assets/warlord_turle/turtle_bullets/bullet_cannon.png" id="1_8vi56"]
[ext_resource type="Script" uid="uid://fas3eq4tonw" path="res://enemy/boss/boomb.gd" id="1_l0drh"]
[ext_resource type="Script" uid="uid://xqvgljx4hk1s" path="res://scripts/hit_area_2d.gd" id="2_l0drh"]
[ext_resource type="Texture2D" uid="uid://0ivbumvuai27" path="res://assets/warlord_turle/turtle_bullets/bullet_rocket_particle.png" id="3_fxee5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fxee5"]
radius = 14.2857

[sub_resource type="CircleShape2D" id="CircleShape2D_l0drh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_plbos"]

[node name="Boomb" type="RigidBody2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_l0drh")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_8vi56")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_fxee5")

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 5
script = ExtResource("2_l0drh")
metadata/_custom_type_script = "uid://xqvgljx4hk1s"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
position = Vector2(0, -1.19209e-07)
shape = SubResource("CircleShape2D_fxee5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.8147e-06, 1.90735e-06)
shape = SubResource("CircleShape2D_l0drh")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="DirectionArea" type="Area2D" parent="."]
position = Vector2(0, 15.7143)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionArea"]
position = Vector2(-9.53674e-07, -15.7143)
shape = SubResource("CircleShape2D_plbos")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="DirectionArea" to="." method="_on_direction_area_body_entered"]
